--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <center>
     <h1>About Myself</h1>
-    <p>As a BCA (Bachelor of Computer Applications) graduate, I have acquired a strong foundation in computer science and information technology. My coursework has covered a range of topics, including programming languages, software development, database management, networking, and systems analysis.
+    <p class="test">As a BCA (Bachelor of Computer Applications) graduate, I have acquired a strong foundation in computer science and information technology. My coursework has covered a range of topics, including programming languages, software development, database management, networking, and systems analysis.
 
         Throughout my academic journey, I have honed my problem-solving skills and gained practical experience in designing and developing software applications. I am proficient in languages such as Java, C++, and Python, and I have hands-on experience with databases like MySQL and Oracle.
         
@@ -19,8 +19,8 @@
     <center>
     <h2>My Skills</h2>
     </center>
-    <p >
-    <ul>
+    <p>
+    <ul class="test">
         <li>c++ </li>
         <li>python</li>
         <li>javascript</li>
